[package]
name = "RTSassignment"
version = "0.1.0"
edition = "2021"
default-run = "ocs"

[dependencies]
rand = "0.8"
sysinfo = "0.32"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "telemetry_backlog"
harness = false